// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmptyState snapshot (dois temas): claro 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "gap": 16,
      "padding": 24,
    }
  }
>
  <View>
    <Image
      accessibilityIgnoresInvertColors={true}
      resizeMode="contain"
      source={
        {
          "testUri": "../../../assets/stickers/thinking.webp",
        }
      }
      style={
        {
          "height": 96,
          "width": 96,
        }
      }
    />
  </View>
  <Text
    maxFontSizeMultiplier={1.3}
    style={
      [
        {
          "fontFamily": "Inter-Regular",
          "fontSize": 16,
          "lineHeight": 22,
        },
        {
          "color": "#5F5F6A",
        },
        {
          "textAlign": "center",
        },
        null,
      ]
    }
  >
    Nada por aqui com esse filtro.
  </Text>
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": false,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
  >
    <View
      collapsable={false}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#C7186B",
          "borderColor": undefined,
          "borderRadius": 12,
          "borderWidth": 0,
          "justifyContent": "center",
          "minHeight": 44,
          "opacity": 1,
          "paddingHorizontal": 20,
          "transform": [
            {
              "scale": 1,
            },
          ],
        }
      }
    >
      <Text
        maxFontSizeMultiplier={1.3}
        style={
          [
            {
              "fontFamily": "Inter-Medium",
              "fontSize": 14,
              "lineHeight": 18,
            },
            {
              "color": "#FFFFFF",
            },
            {
              "opacity": 1,
            },
            null,
          ]
        }
      >
        Limpar filtro
      </Text>
    </View>
  </View>
</View>
`;

exports[`EmptyState snapshot (dois temas): escuro 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "gap": 16,
      "padding": 24,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#17171A",
        "borderRadius": 68,
        "height": 136,
        "justifyContent": "center",
        "width": 136,
      }
    }
  >
    <Image
      accessibilityIgnoresInvertColors={true}
      resizeMode="contain"
      source={
        {
          "testUri": "../../../assets/stickers/thinking.webp",
        }
      }
      style={
        {
          "height": 96,
          "width": 96,
        }
      }
    />
  </View>
  <Text
    maxFontSizeMultiplier={1.3}
    style={
      [
        {
          "fontFamily": "Inter-Regular",
          "fontSize": 16,
          "lineHeight": 22,
        },
        {
          "color": "#9B9BA6",
        },
        {
          "textAlign": "center",
        },
        null,
      ]
    }
  >
    Nada por aqui com esse filtro.
  </Text>
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": false,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
  >
    <View
      collapsable={false}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#FF4FA0",
          "borderColor": undefined,
          "borderRadius": 12,
          "borderWidth": 0,
          "justifyContent": "center",
          "minHeight": 44,
          "opacity": 1,
          "paddingHorizontal": 20,
          "transform": [
            {
              "scale": 1,
            },
          ],
        }
      }
    >
      <Text
        maxFontSizeMultiplier={1.3}
        style={
          [
            {
              "fontFamily": "Inter-Medium",
              "fontSize": 14,
              "lineHeight": 18,
            },
            {
              "color": "#0E0E10",
            },
            {
              "opacity": 1,
            },
            null,
          ]
        }
      >
        Limpar filtro
      </Text>
    </View>
  </View>
</View>
`;
